# sr2-spectre

./: .gitignore  CLAUDE.md  QUICKSTART.md  README.md  config.example.yaml  conftest.py  handoff.md  main.py  pyproject.toml  smoke.yaml
.beads/: metadata.json
docs/: CONFIG-REFERENCE.md  INTERFACE-DEV-GUIDE.md  TOOL-DEV-GUIDE.md  discord-smoke-runbook.md  golive-canary.md  smoke-test-cli-usage.md  smoke-test-spc46.md
docs/smoke/: obsidian-0lx.md  obsidian-165h.md  obsidian-87f.md  obsidian-9fs.md  obsidian-a3q.md  obsidian-cor.md  obsidian-ozj.md  obsidian-vj6.md  spc-44.md  spc-49.md  spc-50.md  spc-51.md  spc-63.md  spc-65.md  spc-66.md  spc-68.md  spc-71.md
src/sr2_spectre/: __init__.py  agent.py  cli.py  config.py  config_merge.py  events.py  framerouter.py  path_resolution.py  pr_review.py  providers.py  runtime.py  session.py  workspace.py
tests/: conftest.py  test_active_frame_wiring.py  test_agent.py  test_agent_flag.py  test_cli_argparse.py  test_comfyui_client.py  test_compiled_trace_cli.py  test_complete_step.py  test_complete_step_auto_inject.py  test_config.py  test_config_dryrun.py  test_config_extends.py  test_config_merge.py  test_config_resolution.py  test_config_validation.py  test_content_cap.py  test_discord_adapter.py  test_discord_auto_thread.py  test_discord_config.py  test_discord_handler.py  test_discord_interface.py  test_discord_session_map.py  test_framerouter.py  test_frontmatter.py  test_generate_image.py  test_image_scenarios.py  test_interface.py  test_layer_budget.py  test_load_skill.py  test_loop.py  test_mcp_client.py  test_mcp_tool_bridge.py  test_mcp_wiring.py  test_memory_store_selection.py  test_memory_wiring.py  test_mode_guidance_resolver.py  test_model_api_key.py  test_model_params.py  test_node_injection.py  test_path_resolution.py  (+49 more)
(+54 files in other folders)
