[project]
name = "sr2-spectre"
version = "0.1.0"
description = "SR2 Spectre — full agent runtime powered by sr2-relay"
readme = "README.md"
authors = [{ name = "Diego Camizotti", email = "diego@terminuslabs.co" }]
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "prompt-toolkit>=3.0.52",
    "pydantic>=2.13.3",
    "pyyaml>=6.0.3",
    "sr2-relay @ file:///home/shepard/git/sr2-relay",
]

[project.scripts]
sr2-spectre = "sr2_spectre.cli:main"

[build-system]
requires = ["uv_build>=0.11.0,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = ["pytest>=9.0.3", "pytest-asyncio>=0.24.0", "ruff>=0.15.11"]
