[project]
name = "sr2-spectre"
version = "0.1.0"
description = "SR2 Spectre — full agent runtime powered by SR2"
readme = "README.md"
authors = [{ name = "Diego Camizotti", email = "diego@terminuslabs.co" }]
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.9.0",
    "mcp>=1.0.0",
    "prompt-toolkit>=3.0.52",
    "pydantic>=2.13.3",
    "pyyaml>=6.0.3",
    "sr2",
]

[tool.uv.sources]
sr2 = { path = "../sr2", editable = true }

[project.scripts]
sr2-spectre = "sr2_spectre.cli:main"

[project.entry-points."sr2.tool_providers"]
spectre_tools = "sr2_spectre.providers:SpectreToolProvider"

[project.entry-points."sr2.resolvers"]
plan = "sr2_spectre.planning.resolver:PlanResolver"

[project.entry-points."sr2.transformers"]
step_compaction = "sr2_spectre.planning.transformer:StepCompactionTransformer"

[build-system]
requires = ["uv_build>=0.11.0,<0.12.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[dependency-groups]
dev = ["pytest>=9.0.3", "pytest-asyncio>=0.24.0", "ruff>=0.15.11"]
